# mcp_memex

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build-macos.sh  build.rs  install.sh
.github/workflows/: ci.yml
scripts/: build-macos.sh
src/: build.rs  lib.rs  main.rs
src/embeddings/: mod.rs
src/handlers/: mod.rs
src/rag/: mod.rs
src/storage/: mod.rs
src/tests/: memory.rs
src/tui/: app.rs  host_detection.rs  mod.rs
