[package]
name = "rmcp_memex"
version = "0.1.5"
edition = "2021"
build = "src/build.rs"

[dependencies]
# Core MCP
rmcp = { version = "0.9.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Storage
sled = "0.34"
moka = { version = "0.12", features = ["future"] }
# chromadb = "2.2" # This is fucked, we'll use REST API directly
fastembed = "5.2.1"
lancedb = "0.22.3"
arrow-array = "56.2"
arrow-schema = "56.2"
futures = "0.3"

# HTTP & APIs
reqwest = { version = "0.12", features = ["json", "stream"] }
octocrab = "0.48"

# Document parsing
pdf-extract = "0.10"
scraper = "0.24"
quick-xml = "0.38"

# Utils
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
shellexpand = "3.1"

[build-dependencies]
protoc-bin-vendored = "3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
